--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ font_awesome: 'XXXXXXXXXX.js'
 
 author: 
   name: 'Chaoyi Zhang'
-  email: Zhangchy93@mail2.sysu.edu.cn
+  email: 'Zhangchy93@mail2.sysu.edu.cn'
  # mastodon: 
  # twitter_username: 
 #  facebook_username: 
-  github_username:  Reset0904
+  github_username:  'Reset0904'
  # linkedin_username:  thomas-zühlke-889182165
  # meetup_name: Azure-Meetup-Rostock-MV
 
