--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@ font_awesome: 'XXXXXXXXXX.js'
 
 author: 
   name: 'Chaoyi Zhang'
-  email: 'Zhangchy93@mail2.sysu.edu.cn'
-  mastodon: 
-  twitter_username: 
-  facebook_username: 
-  github_username:  'Reset0904'
-  linkedin_username:  
+  email: Zhangchy93@mail2.sysu.edu.cn
+  #mastodon: 
+  #twitter_username: 
+  #facebook_username: 
+  github_username:  Reset0904
+  #linkedin_username:  
  # meetup_name: Azure-Meetup-Rostock-MV
 
 # Build settings
